layout/src/sass/pages/_aqsa-distance.scss
.aqsa-distance-section {
  background-color: #f9f9f9;
  position: relative;

  .container {
    position: relative;
  }

  .overlay {
    background-image: url('../images/aqsa-distance/world.png');
    background-position: center center;
    background-repeat: no-repeat;
    background-color: rgba(#f9f9f9, 0.95);
    position: fixed;
    top: 0;
    right: 0;
    width: 100vw;
    height: 100vh;
    z-index: 99;
    transition: all 0.25s;
    display: flex;
    align-items: center;
    justify-content: center;

    .rtl & {
      right: auto;
      left: 0;
    }

    .cancel-btn {
      margin-top: 30px;
    }
    .overlay-content {
      width: 100%;
      //margin-top: 72px;
      text-align: center;
    }
  }
  &.overlay-visible {
    .pin-image {
      z-index: 99;
      position: fixed;
      height: 107px;
      top: 50%;
      transform: translateY(-50%);
      left: auto;
      right: 20% !important;
      transition: all 0.3s;
      @include media-breakpoint-down(md) {
        top: 50px;
        right: 50% !important;
        transform: translateX(50%);
        @media screen and (max-height: 655px) {
          top: 20px;
          transform: scale(0.5) translateX(100%);
        }
      }
    }
    .dome-svg {
      z-index: 99;
      position: fixed;
      top: 50%;
      transform: translateY(-50%);
      left: 15% !important;
      transition: all 0.3s;
      @include media-breakpoint-down(md) {
        top: calc(100% - 150px);
        left: 50% !important;
        transform: scale(0.85) translateX(-62%);
        transform-origin: 50% 0;
        @media screen and (max-height: 655px) {
          top: calc(100% - 100px);
          transform: scale(0.5) translateX(-104%);
        }
      }
    }
  }

  .aqsa-distance-result {
    max-width: 400px;
    margin: auto;
    > span {
      display: block;
      font-size: 26px;
    }
  }

  .distance-number-result {
    font-size: 64px;
  }

  .section-header {
    padding-top: 62px;
    color: $aqsa-distance-dark;
    font-weight: bold;
    font-size: 24px;
    position: relative;
  }
  .pin-image {
    &-wrapper {
      height: 107px;
      padding-bottom: 26px;
      box-sizing: content-box;
    }
    display: block;
    height: 107px;
  }
  .section-content {
    padding-top: 28px;
    padding-bottom: 90px;
  }

  .section-art {
    position: absolute;
    bottom: 0;
    left: 0;
    overflow: hidden;
    width: 100%;
    height: 100%;
    @include media-breakpoint-down(md) {
      > div {
        transform: translateX(-325px);
      }
    }
  }
  .dome-svg {
    position: absolute;
    right: 489px;
    top: 168px;
    @include media-breakpoint-down(md) {
      left: auto;
      top: 30px;
      transform: scale(0.85);
    }
    .rtl & {
      right: auto;
      left: 489px;
      @include media-breakpoint-down(md) {
        right: auto;
        left: 10px;
      }
    }
  }
}

.aqsa-distance-overlay {
  &-enter-active, &-leave-active {
    transition: opacity .2s;
  }
  &-enter, &-leave-to {
    transition: opacity .5s;
    opacity: 0;
  }
}

